# refbot

./: README.md  pyproject.toml
src/refbot/: __init__.py  __main__.py  bot.py  config.py
src/refbot/search/: __init__.py  models.py  youtube.py
tests/: test_bot.py  test_youtube.py
