[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refbot"
version = "0.1.0"
description = "Discord bot for finding YouTube video references for animation, VFX, and art."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpx>=0.30.0",
]

[project.scripts]
refbot = "refbot.bot:main"

[tool.hatch.build.targets.wheel]
packages = ["src/refbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
